--- a/Pointerless/AndroidManifest.xml
+++ b/Pointerless/AndroidManifest.xml
@@ -22,7 +22,8 @@
         </activity>
         <activity
             android:name=".chat.ChatActivity"
-            android:label="@string/title_activity_chat" >
+            android:label="@string/title_activity_chat"
+            android:noHistory="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
